<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskManager</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">ADD A NEW TASK</string>
    <string name="task_name">Task name</string>
    <string name="place_name">Place</string>
    <string name="description">Description</string>
    <string name="tasks_title">Task Manager</string>
    <string name="add_button">ADD</string>    
    <string name="save_data">Save</string>    
    <string name="edit_title">EDIT THE TASK</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    

</resources>
